hphp/hack/test/typecheck/references/refs_in_array/binding_new_element1.php.exp
File "binding_new_element1.php", line 6, characters 10-12:
Binding a reference in an array is no longer supported in Hack. (Typing[4225])
